--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.5",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
